chore: fix lighthouse issues like aria labels, accessability and input id's
- also removed icon font as it didn't really work anyway and was way too big

--- a/src/index.css
+++ b/src/index.css
@@ -1,10 +1,6 @@
 @import "tailwindcss";
+@import "./google-titillium-web.css";
 @import "./factorio.css";
-
-@font-face {
-  font-family: "Noto Sans CJK";
-  src: url("./fonts/NotoSansCJKtc-Bold.ttf");
-}
 
 .quality::after {
   content: "";
